--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,8 +13,8 @@ jobs:
            nodes-version: [15.x]
       
       steps:
-        - name: Checkout
-          uses: actions/checkout@v1
+        - name: Checkout 🛎️
+          uses: actions/checkout@v2.3.1
 
         - name: Install and Build
           uses: npm install && npm run build
