--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,15 +6,15 @@ on:
         - "master"
 jobs:
   build:
-      runs-on: windows-latest
+      runs-on: ubuntu-latest
 
       strategy:
         matrix:
            nodes-version: [15.x]
       
       steps:
-        - name: Checkout 🛎️
-          uses: actions/checkout@v2.3.1
+        - name: Checkout
+          uses: actions/checkout@master
 
         - name: Install and Build
           uses: npm install && npm run build
