--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,26 +2,26 @@ name: Github Pages Deploy
 
 on:
   push:
-      branches:
-        - "master"
+    branches:
+      - "master"
+
 jobs:
   build:
-      runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-      strategy:
-        matrix:
-           nodes-version: [15.x]
+    strategy:
+      matrix:
+        node-version: [15.x]
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Install and build
+        run: npm install && npm run build
       
-      steps:
-        - name: Checkout
-          uses: actions/checkout@master
-
-        - name: Install and Build
-          uses: npm install && npm run build
-
-        - name: Deploy
-          uses: JamesIves/github-pages-deploy-action@4.1.5
-          with:
-            branch: gh-pages # The branch the action should deploy to.
-            folder: build # The folder the action should deploy.
-       
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.        
